<resources>
    <string name="app_name">WeatherForeCast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="giza">Giza</string>
    <string name="sunny_day">Sunny Day</string>
    <string name="day_degree">Degree</string>
    <string name="save">Save Location</string>
    <string name="locationText">Location</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="setting">App Setting</string>
    <string name="location">Location</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_second">Meter/second</string>
    <string name="mile_hour">Mile/hour</string>
    <string name="language">App Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="weather_location"> %1$s</string>
    <string name="weather_date">%1$s</string>
    <string name="weather_status"> %1$s</string>
    <string name="clouds_format">%s%%</string>
    <string name="degree_format">%s°C</string>
    <string name="pressure_format">%s hPa</string>
    <string name="humidity_format">%s%%</string>
    <string name="wind_speed_format">%s m/s</string>
    <string name="visibility_format">%s km</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="hour_format">%02d:00</string>
    <string name="home_menu">Home</string>
    <string name="favorite_menu">Favorite</string>
    <string name="alert_menu">Alert</string>
    <string name="setting_menu">Setting</string>
    <string name="unit_hpa">hPa</string>
    <string name="unit_percent">%</string>
    <string name="unit_kilometer">km</string>
    <string name="current_temperature"> %1$s°C</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="humadity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="visability">Visibility</string>
    <string name="weatherState">Status</string>
    <string name="unit_meter_per_sec">m/s</string>
    <string name="unit_miles_per_hour">mph</string>
    <string name="allow">Allow</string>
    <string name="ask_for_permission">We cannot provide location for you right now. Please allow location.</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="alert">Alert</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="ZoneName">Zone Name</string>
    <string name="cityName">City Name</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="save_alarm">Save</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="map_screen">Map Screen</string>
    <string name="do_you_want_to_save">Do you want to save this location?</string>
    <string name="alerts">Alerts</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="weatherStatus">Weather Status</string>
    <string name="deleteFavoriteDialog">Delete Favorite</string>
    <string name="areYouSureDeleteLocation">Are you sure you want to delete the location </string>
    <string name="alarm">Alarm</string>
    <string name="yes">Yes</string>
    <string name="selectDate">Select Date</string>
    <string name="selectAppoinmentTime"> Select Appointment time</string>
    <string name="search_city">Search city</string>
    <string name="clear">Clear\n</string>
    <string name="fabSb">" click"</string>
    <string name="dissmis">Dismiss</string>
    <string name="weather_status_today">Weather Status Tody</string>
    <string name="undo">Undo</string>
    <string name="network_equired">Network Required</string>
    <string name="connect_to_network">Connect to a network to see favorite weather details</string>

</resources>
