<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wh_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherforecast.view.homefragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weatherforecast.view.favorite.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherforecast.view.alert.view.AlertFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.weatherforecast.view.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_settingFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/settingFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherforecast.view.map.MapFragment"
        android:label="@string/map_screen"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/mapFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>