<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_save"
        android:textSize="16sp"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btnSure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/sky"
        android:text="@string/sure" />

    <Button
        android:id="@+id/btnCancel"
        android:backgroundTint="@color/sky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>
