<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:background="@drawable/gradient_background"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            android:padding="16dp">

            <!-- City Name (Zone) -->

            <!-- Main Weather Alarm Text -->

            <TextView
                android:id="@+id/tv_alarm_zone_name"
                android:layout_width="0dp"
                android:fontFamily="@font/poppins_bold_italic"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/cityName"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="New York" />

            <TextView
                android:id="@+id/weather_alarm_mainText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/weather_alarm"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Severe Weather Alert!" />

            <!-- Weather Status Message -->

            <!-- Dismiss Button -->

            <TextView
                android:id="@+id/tv_alarm_status"
                android:layout_width="0dp"
                android:fontFamily="@font/poppins_semibolditalic"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/weatherStatus"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_alarm_zone_name"
                tools:text="Clear skies expected" />

            <Button
                android:id="@+id/dismiss_alarm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss"
                android:textSize="18sp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:padding="10dp"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_alarm_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
